--- a/public/gemini_adv.html
+++ b/public/gemini_adv.html
@@ -25,12 +25,12 @@
                         <tbody class="divide-y divide-slate-100">
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span class="dark:text-white">1. 이격도</span>
+                                    <span class="dark:text-white break-keep">1. 이격도</span>
                                     <span class="md:hidden text-red-600 font-bold">100.00</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-red-600 font-bold text-center">100.00</td>
                                 <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-red-600">
-                                    <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>극심한 탐욕
+                                    <span class="md:hidden text-xs text-slate-400 mr-2 break-keep">상태:</span>극심한 탐욕
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
                                     125일 평균보다 10% 이상 높습니다. 고무줄이 끊어지기 직전까지 팽팽하게 늘어난 상태예요.
@@ -39,12 +39,12 @@
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span class="dark:text-white">2. RSI</span>
+                                    <span class="dark:text-white break-keep">2. RSI</span>
                                     <span class="md:hidden text-red-600 font-bold">88.64</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-red-600 font-bold text-center">88.64</td>
                                 <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-red-600">
-                                    <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>극심한 탐욕
+                                    <span class="md:hidden text-xs text-slate-400 mr-2 break-keep">상태:</span>극심한 탐욕
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
                                     주가 상승 속도가 비정상적으로 빠릅니다. "묻지마 매수"가 들어오고 있다는 강력한 증거입니다.
@@ -53,12 +53,12 @@
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span class="dark:text-white">3. ADR</span>
+                                    <span class="dark:text-white break-keep">3. ADR</span>
                                     <span class="md:hidden text-blue-600 font-bold">60.00</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-600 font-bold text-center">60.00</td>
                                 <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-blue-600">
-                                    <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>공포/소외
+                                    <span class="md:hidden text-xs text-slate-400 mr-2 break-keep">상태:</span>공포/소외
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
                                     중요! 지수는 고점 부근인데, 상승 종목 수는 오히려 적습니다. 대형주 몇 개만 오르고 나머지는 하락하는 '쏠림'이 심각합니다.
@@ -67,12 +67,12 @@
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span class="dark:text-white">4. VKOSPI</span>
+                                    <span class="dark:text-white break-keep">4. VKOSPI</span>
                                     <span class="md:hidden text-blue-600 font-bold">4.40</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-600 font-bold text-center">4.40</td>
                                 <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-blue-600">
-                                    <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>극단적 공포
+                                    <span class="md:hidden text-xs text-slate-400 mr-2 break-keep">상태:</span>극단적 공포
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
                                     주의! 변동성 지수 스케일링이 4.40이라는 것은 실제 변동성이 38%를 넘겼다는 뜻입니다. 투자자들이 극도로 불안해하고 있습니다.
@@ -81,12 +81,12 @@
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span class="dark:text-white break-keep">5. 풋콜 비율</span>
+                                    <span class="dark:text-white break-keep break-keep">5. 풋콜 비율</span>
                                     <span class="md:hidden text-blue-800 font-bold">48.96</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-800 font-bold text-center">48.96</td>
                                 <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-blue-800">
-                                    <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>중립/공포
+                                    <span class="md:hidden text-xs text-slate-400 mr-2 break-keep">상태:</span>중립/공포
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
                                     하락 베팅이 서서히 힘을 얻고 있습니다.
