--- a/public/gemini_adv.html
+++ b/public/gemini_adv.html
@@ -85,8 +85,8 @@
                                     <span class="md:hidden text-blue-800 font-bold">48.96</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-800 font-bold text-center">48.96</td>
-                                <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-blue-800">
-                                    <span class="md:hidden text-xs text-slate-400 mr-2 break-keep">상태:</span>중립/공포
+                                <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-blue-800 break-keep">
+                                    <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>중립/공포
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
                                     하락 베팅이 서서히 힘을 얻고 있습니다.
