chore: update domain to anse.ai.kr, add redirects and hide unused pages

--- a/public/dinner.html
+++ b/public/dinner.html
@@ -7,18 +7,18 @@
     <meta name="description" content="AI가 추천하는 오늘 저녁 메뉴. 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.">
     <meta name="author" content="anse">
     <meta name="date" content="2026-01-17">
-    <link rel="canonical" href="https://anse-sample1.pages.dev/dinner.html">
+    <link rel="canonical" href="https://anse.ai.kr/dinner.html">
 
     <meta property="og:title" content="오늘 저녁 뭐 먹지? - AI 기반 저녁 메뉴 추천기 (2026년 기준)">
     <meta property="og:description" content="AI가 추천하는 오늘 저녁 메뉴. 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anse-sample1.pages.dev/dinner.html">
-    <meta property="og:image" content="https://anse-sample1.pages.dev/favicon.svg">
+    <meta property="og:url" content="https://anse.ai.kr/dinner.html">
+    <meta property="og:image" content="https://anse.ai.kr/favicon.svg">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="오늘 저녁 뭐 먹지? - AI 기반 저녁 메뉴 추천기 (2026년 기준)">
     <meta name="twitter:description" content="오늘 저녁 메뉴가 고민될 때, 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.">
-    <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
+    <meta name="twitter:image" content="https://anse.ai.kr/favicon.svg">
 
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
@@ -72,7 +72,7 @@
           "@context": "https://schema.org",
           "@type": "Article",
           "headline": "오늘 저녁 뭐 먹지? - AI 기반 저녁 메뉴 추천기",
-          "url": "https://anse-sample1.pages.dev/dinner.html",
+          "url": "https://anse.ai.kr/dinner.html",
           "description": "AI가 추천하는 오늘 저녁 메뉴. 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.",
           "datePublished": "2026-01-17",
           "author": {
@@ -99,9 +99,6 @@
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">한국 금융시장 심리</a>
-<a class="text-sm font-semibold text-primary" href="/dinner.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
 </div>
 </div>
@@ -121,9 +118,6 @@
 <div id="mobile-menu" class="md:hidden hidden bg-white/80 dark:bg-background-dark/80 backdrop-blur-md pb-4 border-b border-solid border-[#e7ecf4] dark:border-[#1e293b]">
 <nav class="flex flex-col items-center gap-4 py-2">
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">한국 금융시장 심리</a>
-<a class="text-sm font-semibold text-primary" href="/dinner.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
 </nav>
 </div>
@@ -366,8 +360,8 @@ if (generateBtn) {
         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
         *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
         var disqus_config = function () {
-            this.page.url = 'https://anse-sample1.pages.dev/dinner.html';  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = 'https://anse-sample1.pages.dev/dinner.html'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            this.page.url = 'https://anse.ai.kr/dinner.html';  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = 'https://anse.ai.kr/dinner.html'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
         };
         (function() { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
