--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,18 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>국내 금융시장 심리</title> <!-- Keep original title -->
 <meta name="description" content="한국 주식시장의 공포 탐욕 지수를 확인하고 투자에 참고하세요."/> <!-- Keep original description -->
-<link rel="canonical" href="https://anse-sample1.pages.dev/"/> <!-- Keep original canonical -->
+<link rel="canonical" href="https://anse.ai.kr/"/> <!-- Keep original canonical -->
 
 <meta property="og:title" content="국내 금융시장 심리"/> <!-- Keep original og tags -->
 <meta property="og:description" content="한국 주식시장의 공포 탐욕 지수를 확인하고 투자에 참고하세요."/>
 <meta property="og:type" content="website"/>
-<meta property="og:url" content="https://anse-sample1.pages.dev/"/>
-<meta property="og:image" content="https://anse-sample1.pages.dev/images/neutral.png"/>
+<meta property="og:url" content="https://anse.ai.kr/"/>
+<meta property="og:image" content="https://anse.ai.kr/images/neutral.png"/>
 
 <meta name="twitter:card" content="summary"/> <!-- Keep original twitter tags -->
 <meta name="twitter:title" content="국내 금융시장 심리"/>
 <meta name="twitter:description" content="한국 주식시장의 공포 탐욕 지수를 확인하고 투자에 참고하세요."/>
-<meta name="twitter:image" content="https://anse-sample1.pages.dev/images/neutral.png"/>
+<meta name="twitter:image" content="https://anse.ai.kr/images/neutral.png"/>
 
 <!-- Existing styles and icons -->
 <link rel="stylesheet" href="style.css"/> <!-- Keep this for now, will remove later if Tailwind replaces all -->
@@ -77,7 +77,7 @@
       "@context": "https://schema.org",
       "@type": "Article",
       "headline": "국내 금융시장 심리",
-      "url": "https://anse-sample1.pages.dev/",
+      "url": "https://anse.ai.kr/",
       "description": "한국 주식시장의 공포 탐욕 지수를 확인하고 투자에 참고하세요.",
       "datePublished": "2026-01-17",
       "author": {
@@ -102,9 +102,6 @@
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-semibold text-primary" href="/index.html">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/dinner.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
 </div>
 </div>
@@ -125,9 +122,6 @@
 <div id="mobile-menu" class="md:hidden hidden bg-white/80 dark:bg-background-dark/80 backdrop-blur-md pb-4 border-b border-solid border-[#e7ecf4] dark:border-[#1e293b]">
 <nav class="flex flex-col items-center gap-4 py-2">
 <a class="text-sm font-semibold text-primary" href="/index.html">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/dinner.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
 </nav>
 </div>
