--- a/public/insect.html
+++ b/public/insect.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나는 어떤 곤충상일까? - 곤충상 테스트</title>
     <meta name="description" content="AI가 당신의 얼굴을 분석하여 어떤 곤충상에 가까운지 알려드립니다.">
-    <link rel="canonical" href="https://anse-sample1.pages.dev/insect.html">
+    <link rel="canonical" href="https://anse.ai.kr/insect.html">
 
     <meta property="og:title" content="나는 어떤 곤충상일까? - 곤충상 테스트">
     <meta property="og:description" content="AI가 당신의 얼굴을 분석하여 어떤 곤충상에 가까운지 알려드립니다.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anse-sample1.pages.dev/insect.html">
-    <meta property="og:image" content="https://anse-sample1.pages.dev/favicon.svg">
+    <meta property="og:url" content="https://anse.ai.kr/insect.html">
+    <meta property="og:image" content="https://anse.ai.kr/favicon.svg">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="나는 어떤 곤충상일까? - 곤충상 테스트">
     <meta property="twitter:description" content="AI가 당신의 얼굴을 분석하여 어떤 곤충상에 가까운지 알려드립니다.">
-    <meta property="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
+    <meta property="twitter:image" content="https://anse.ai.kr/favicon.svg">
 
     <!-- Styles from index.html -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
@@ -165,7 +165,7 @@
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "곤충상 테스트",
-      "url": "https://anse-sample1.pages.dev/insect.html",
+      "url": "https://anse.ai.kr/insect.html",
       "description": "AI가 당신의 얼굴을 분석하여 어떤 곤충상에 가까운지 알려드립니다.",
       "applicationCategory": "Entertainment",
       "operatingSystem": "Any",
@@ -187,9 +187,6 @@
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/dinner.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-semibold text-primary" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
 </div>
 </div>
@@ -209,9 +206,6 @@
 <div id="mobile-menu" class="md:hidden hidden bg-white/80 dark:bg-background-dark/80 backdrop-blur-md pb-4 border-b border-solid border-[#e7ecf4] dark:border-[#1e293b]">
 <nav class="flex flex-col items-center gap-4 py-2">
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/dinner.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-semibold text-primary" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
 </nav>
 </div>
@@ -493,8 +487,8 @@
 
         // Disqus configuration (remains unchanged)
         var disqus_config = function () {
-            this.page.url = 'https://anse-sample1.pages.dev/insect.html';
-            this.page.identifier = 'https://anse-sample1.pages.dev/insect.html';
+            this.page.url = 'https://anse.ai.kr/insect.html';
+            this.page.identifier = 'https://anse.ai.kr/insect.html';
         };
         (function() {
         var d = document, s = d.createElement('script');
