--- a/public/privacy.html
+++ b/public/privacy.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>개인정보처리방침 - 오늘 저녁 뭐 먹지?</title>
     <meta name="description" content="본 웹사이트의 개인정보처리방침에 대해 안내합니다. 사용자의 개인정보 보호를 최우선으로 합니다.">
-    <link rel="canonical" href="https://anse-sample1.pages.dev/privacy.html">
+    <link rel="canonical" href="https://anse.ai.kr/privacy.html">
 
     <meta property="og:title" content="개인정보처리방침 - 오늘 저녁 뭐 먹지?">
     <meta property="og:description" content="본 웹사이트의 개인정보처리방침에 대해 안내합니다. 사용자의 개인정보 보호를 최우선으로 합니다.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anse-sample1.pages.dev/privacy.html">
-    <meta property="og:image" content="https://anse-sample1.pages.dev/favicon.svg">
+    <meta property="og:url" content="https://anse.ai.kr/privacy.html">
+    <meta property="og:image" content="https://anse.ai.kr/favicon.svg">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="개인정보처리방침 - 오늘 저녁 뭐 먹지?">
     <meta property="twitter:description" content="본 웹사이트의 개인정보처리방침에 대해 안내합니다. 사용자의 개인정보 보호를 최우선으로 합니다.">
-    <meta property="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
+    <meta property="twitter:image" content="https://anse.ai.kr/favicon.svg">
 
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
@@ -80,9 +80,6 @@
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/dinner.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
 
 <a class="text-sm font-semibold text-primary" href="/privacy.html">개인정보처리방침</a>
@@ -104,9 +101,6 @@
 <div id="mobile-menu" class="md:hidden hidden bg-white/80 dark:bg-background-dark/80 backdrop-blur-md pb-4 border-b border-solid border-[#e7ecf4] dark:border-[#1e293b]">
 <nav class="flex flex-col items-center gap-4 py-2">
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/dinner.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
 
 <a class="text-sm font-semibold text-primary" href="/privacy.html">개인정보처리방침</a>
@@ -225,8 +219,8 @@
     <script>
         // Disqus configuration (remains unchanged)
         var disqus_config = function () {
-            this.page.url = 'https://anse-sample1.pages.dev/privacy.html';
-            this.page.identifier = 'https://anse-sample1.pages.dev/privacy.html';
+            this.page.url = 'https://anse.ai.kr/privacy.html';
+            this.page.identifier = 'https://anse.ai.kr/privacy.html';
         };
         (function() {
         var d = document, s = d.createElement('script');
