--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>금융 시장 심리 알아보기 - 오늘 저녁 뭐 먹지?</title>
     <meta name="description" content="금융 시장의 심리를 알아보고 투자 결정에 참고하세요.">
-    <link rel="canonical" href="https://anse-sample1.pages.dev/sentiment.html">
+    <link rel="canonical" href="https://anse.ai.kr/sentiment.html">
 
     <meta property="og:title" content="금융 시장 심리 알아보기 - 오늘 저녁 뭐 먹지?">
     <meta property="og:description" content="금융 시장의 심리를 알아보고 투자 결정에 참고하세요.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anse-sample1.pages.dev/sentiment.html">
-    <meta property="og:image" content="https://anse-sample1.pages.dev/favicon.svg">
+    <meta property="og:url" content="https://anse.ai.kr/sentiment.html">
+    <meta property="og:image" content="https://anse.ai.kr/favicon.svg">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="금융 시장 심리 알아보기 - 오늘 저녁 뭐 먹지?">
     <meta name="twitter:description" content="금융 시장의 심리를 알아보고 투자 결정에 참고하세요.">
-    <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
+    <meta name="twitter:image" content="https://anse.ai.kr/favicon.svg">
 
     <!-- Styles from index.html -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
@@ -72,7 +72,7 @@
       "@context": "https://schema.org",
       "@type": "Article",
       "headline": "금융 시장 심리 알아보기",
-      "url": "https://anse-sample1.pages.dev/sentiment.html",
+      "url": "https://anse.ai.kr/sentiment.html",
       "description": "금융 시장의 심리를 알아보고 투자 결정에 참고하세요.",
       "datePublished": "2026-01-17",
       "author": {
@@ -120,9 +120,6 @@
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/dinner.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
 <a class="text-sm font-semibold text-primary" href="/sentiment.html">미국 금융 시장 심리</a>
 </div>
 </div>
@@ -143,9 +140,6 @@
 <div id="mobile-menu" class="md:hidden hidden bg-white/80 dark:bg-background-dark/80 backdrop-blur-md pb-4 border-b border-solid border-[#e7ecf4] dark:border-[#1e293b]">
 <nav class="flex flex-col items-center gap-4 py-2">
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/dinner.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
 <a class="text-sm font-semibold text-primary" href="/sentiment.html">미국 금융 시장 심리</a>
 </nav>
 </div>
@@ -197,19 +191,7 @@
                 </div>
             </div>
 
-            <div class="lg:col-span-12 mt-2"> <!-- Contact section column -->
-                <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
-                    <div class="contact-section">
-                        <h2 class="text-lg font-bold">제휴 문의</h2>
-                        <form action="https://formspree.io/f/mlggrwrk" method="POST">
-                            <input type="text" name="name" placeholder="이름" required>
-                            <input type="email" name="email" placeholder="이메일" required>
-                            <textarea name="message" placeholder="내용" required></textarea>
-                            <button type="submit" class="rounded-lg bg-primary px-4 py-2 text-sm font-bold text-white hover:opacity-80 transition-colors">보내기</button>
-                        </form>
-                    </div>
-                </div>
-            </div>           
+          
         </div>
 
 
@@ -404,8 +386,8 @@
 
         // Disqus configuration (remains unchanged)
         var disqus_config = function () {
-            this.page.url = 'https://anse-sample1.pages.dev/sentiment.html';
-            this.page.identifier = 'https://anse-sample1.pages.dev/sentiment.html';
+            this.page.url = 'https://anse.ai.kr/sentiment.html';
+            this.page.identifier = 'https://anse.ai.kr/sentiment.html';
         };
         (function() {
         var d = document, s = d.createElement('script');
